# 2021AutonomousShippingRobot

./: README.md
DWA_robot/: CMakeLists.txt  package.xml
DWA_robot/src/: DWAtest (another copy).py  DWAtest (copy).py  DWAtest.py
aruco/: CMakeLists.txt  package.xml
aruco/src/: aruco_pub.py
control/: package.xml
control/src/: control_test.py
dwa_robot/src/: DWAtest.py
mani_aruco/: CMakeLists.txt  package.xml
mani_aruco/msg/: aruco_msgs.msg
mani_aruco/src/: mani_aruco.py
my_first_ros_pkg/: CMakeLists.txt  package.xml
my_first_ros_pkg/src/: test_turtle_mani.cpp
navigation/launch/: gmapping.launch
navigation/rviz/: gmapping.rviz  rviz.rviz
navigation/src/: send_current_xyz.py  send_start_xyz.py  send_startpos.py
openmanipulator/: CMakeLists.txt  package.xml
openmanipulator/src/: test_turtle_mani.cpp
test_turtle_mani/: CMakeLists.txt
test_turtle_mani/include/: test_turtle_mani.hpp
test_turtle_mani/msg/: Msg.msg
test_turtle_mani/src/: mani_test.cpp  test_turtle_mani.cpp  test_turtle_mani_with_kine.cpp
tf/: test.py
tf/src/: tf.py  tf_pub.py  tf_sub.py
